--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -125,8 +125,8 @@ IDI_ICON                ICON                    "Res\\ShareazaIcon.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,0,28
- PRODUCTVERSION 2,0,0,28
+ FILEVERSION 2,0,0,29
+ PRODUCTVERSION 2,0,0,29
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -144,12 +144,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 0, 0, 28"
+            VALUE "FileVersion", "2, 0, 0, 29"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 0, 0, 28"
+            VALUE "ProductVersion", "2, 0, 0, 29"
         END
     END
     BLOCK "VarFileInfo"
@@ -3735,6 +3735,11 @@ BEGIN
 0x6361, 0x6563, 0x7470, 0x6920, 0x636e, 0x6d6f, 0x6e69, 0x2067, 0x6f63, 
 0x6e6e, 0x6365, 0x6974, 0x6e6f, 0x2073, 0x7266, 0x6d6f, 0x7420, 0x6568, 
 0x4920, 0x746e, 0x7265, 0x656e, 0x0074, 
+    IDC_CONNECTION_LAN_SELECT, 0x403, 55, 0
+0x4920, 0x6420, 0x6e6f, 0x7427, 0x6b20, 0x6f6e, 0x2c77, 0x7020, 0x656c, 
+0x7361, 0x2065, 0x5541, 0x4f54, 0x442d, 0x5445, 0x4345, 0x2054, 0x6874, 
+0x2065, 0x6966, 0x6572, 0x6177, 0x6c6c, 0x6465, 0x7320, 0x6174, 0x6574, 
+"\000" 
     IDC_CONNECTION_HOME_SELECT, 0x403, 40, 0
 0x4e20, 0x2c6f, 0x4920, 0x6820, 0x7661, 0x2065, 0x5546, 0x4c4c, 0x4120, 
 0x4343, 0x5345, 0x2053, 0x6f74, 0x7420, 0x6568, 0x4920, 0x746e, 0x7265, 
@@ -3748,16 +3753,26 @@ BEGIN
 0x6361, 0x6563, 0x7470, 0x6920, 0x636e, 0x6d6f, 0x6e69, 0x2067, 0x6f63, 
 0x6e6e, 0x6365, 0x6974, 0x6e6f, 0x2073, 0x7266, 0x6d6f, 0x7420, 0x6568, 
 0x4920, 0x746e, 0x7265, 0x656e, 0x0074, 
+    IDC_CONNECTION_HOME_SELECT, 0x403, 55, 0
+0x4920, 0x6420, 0x6e6f, 0x7427, 0x6b20, 0x6f6e, 0x2c77, 0x7020, 0x656c, 
+0x7361, 0x2065, 0x5541, 0x4f54, 0x442d, 0x5445, 0x4345, 0x2054, 0x6874, 
+0x2065, 0x6966, 0x6572, 0x6177, 0x6c6c, 0x6465, 0x7320, 0x6174, 0x6574, 
+"\000" 
     IDC_CONNECTION_TYPE, 0x403, 1, 0
 "\000" 
-    IDC_CONNECTION_TYPE, 0x403, 14, 0
-0x4420, 0x6169, 0x756c, 0x2070, 0x6f4d, 0x6564, 0x006d, 
+    IDC_CONNECTION_TYPE, 0x403, 15, 0
+0x4420, 0x6169, 0x206c, 0x7075, 0x4d20, 0x646f, 0x6d65, "\000" 
     IDC_CONNECTION_TYPE, 0x403, 6, 0
 0x4920, 0x4453, 0x004e, 
-    IDC_CONNECTION_TYPE, 0x403, 17, 0
-0x4320, 0x6261, 0x656c, 0x4d20, 0x646f, 0x6d65, 0x442f, 0x4c53, "\000" 
-    IDC_CONNECTION_TYPE, 0x403, 4, 0
-0x5420, 0x0031, 
+    IDC_CONNECTION_TYPE, 0x403, 13, 0
+0x4120, 0x5344, 0x204c, 0x3228, 0x3635, 0x294b, "\000" 
+    IDC_CONNECTION_TYPE, 0x403, 13, 0
+0x4120, 0x5344, 0x204c, 0x3528, 0x3231, 0x294b, "\000" 
+    IDC_CONNECTION_TYPE, 0x403, 13, 0
+0x4120, 0x5344, 0x204c, 0x3128, 0x352e, 0x294d, "\000" 
+    IDC_CONNECTION_TYPE, 0x403, 18, 0
+0x4320, 0x6261, 0x656c, 0x4d20, 0x646f, 0x6d65, 0x532f, 0x5344, 0x004c, 
+
     IDC_CONNECTION_TYPE, 0x403, 4, 0
 0x5420, 0x0033, 
     IDC_CONNECTION_TYPE, 0x403, 5, 0
@@ -3779,17 +3794,19 @@ BEGIN
     IDC_CONNECTION_SPEED, 0x403, 10, 0
 0x3220, 0x3635, 0x6b20, 0x7062, 0x0073, 
     IDC_CONNECTION_SPEED, 0x403, 10, 0
-0x3320, 0x3035, 0x6b20, 0x7062, 0x0073, 
-    IDC_CONNECTION_SPEED, 0x403, 10, 0
-0x3520, 0x3637, 0x6b20, 0x7062, 0x0073, 
+0x3520, 0x3231, 0x6b20, 0x7062, 0x0073, 
     IDC_CONNECTION_SPEED, 0x403, 11, 0
 0x3120, 0x3230, 0x2034, 0x626b, 0x7370, "\000" 
+    IDC_CONNECTION_SPEED, 0x403, 11, 0
+0x3120, 0x3335, 0x2036, 0x626b, 0x7370, "\000" 
     IDC_CONNECTION_SPEED, 0x403, 11, 0
 0x3220, 0x3430, 0x2038, 0x626b, 0x7370, "\000" 
     IDC_CONNECTION_SPEED, 0x403, 11, 0
 0x3320, 0x3730, 0x2032, 0x626b, 0x7370, "\000" 
     IDC_CONNECTION_SPEED, 0x403, 11, 0
 0x3420, 0x3930, 0x2036, 0x626b, 0x7370, "\000" 
+    IDC_CONNECTION_SPEED, 0x403, 11, 0
+0x3520, 0x3231, 0x2030, 0x626b, 0x7370, "\000" 
     0
 END
 
@@ -4907,6 +4924,9 @@ BEGIN
     IDS_TIP_BOGUS           "This file appears to be spam."
     IDS_TIP_EXISTS_DELETED  "You have downloaded and deleted this file before."
     IDS_TIP_EXISTS_BLACKLISTED "Blacklisted: "
+    IDS_TIP_HITS            "Hits"
+    IDS_TIP_UPLOADS         "Uploads"
+    IDS_TIP_TODAYTOTAL      "%lu today, %lu total"
 END
 
 STRINGTABLE 
