--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -125,8 +125,8 @@ IDI_ICON                ICON                    "Res\\ShareazaIcon.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,0,31
- PRODUCTVERSION 2,0,0,31
+ FILEVERSION 2,0,0,33
+ PRODUCTVERSION 2,0,0,33
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -144,12 +144,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 0, 0, 31"
+            VALUE "FileVersion", "2, 0, 0, 33"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 0, 0, 31"
+            VALUE "ProductVersion", "2, 0, 0, 33"
         END
     END
     BLOCK "VarFileInfo"
@@ -3770,6 +3770,8 @@ BEGIN
 0x4120, 0x5344, 0x204c, 0x3228, 0x3635, 0x294b, "\000" 
     IDC_CONNECTION_TYPE, 0x403, 13, 0
 0x4120, 0x5344, 0x204c, 0x3528, 0x3231, 0x294b, "\000" 
+    IDC_CONNECTION_TYPE, 0x403, 13, 0
+0x4120, 0x5344, 0x204c, 0x3728, 0x3836, 0x294b, "\000" 
     IDC_CONNECTION_TYPE, 0x403, 13, 0
 0x4120, 0x5344, 0x204c, 0x3128, 0x352e, 0x294d, "\000" 
     IDC_CONNECTION_TYPE, 0x403, 18, 0
