--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -125,8 +125,8 @@ IDI_ICON                ICON                    "Res\\ShareazaIcon.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,0,37
- PRODUCTVERSION 2,0,0,37
+ FILEVERSION 2,0,0,38
+ PRODUCTVERSION 2,0,0,38
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -144,12 +144,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 0, 0, 37"
+            VALUE "FileVersion", "2, 0, 0, 38"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 0, 0, 37"
+            VALUE "ProductVersion", "2, 0, 0, 38"
         END
     END
     BLOCK "VarFileInfo"
@@ -3777,6 +3777,8 @@ BEGIN
     IDC_CONNECTION_TYPE, 0x403, 18, 0
 0x4320, 0x6261, 0x656c, 0x4d20, 0x646f, 0x6d65, 0x532f, 0x5344, 0x004c, 
 
+    IDC_CONNECTION_TYPE, 0x403, 4, 0
+0x5420, 0x0031, 
     IDC_CONNECTION_TYPE, 0x403, 4, 0
 0x5420, 0x0033, 
     IDC_CONNECTION_TYPE, 0x403, 5, 0
