--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -125,8 +125,8 @@ IDI_ICON                ICON                    "Res\\ShareazaIcon.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,2,14
- PRODUCTVERSION 2,0,2,14
+ FILEVERSION 2,0,2,15
+ PRODUCTVERSION 2,0,2,15
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -144,12 +144,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 0, 2, 14"
+            VALUE "FileVersion", "2, 0, 2, 15"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 0, 2, 14"
+            VALUE "ProductVersion", "2, 0, 2, 15"
         END
     END
     BLOCK "VarFileInfo"
@@ -5396,6 +5396,10 @@ END
 STRINGTABLE 
 BEGIN
     IDS_STATUS_SOURCES      "sources"
+    IDS_STATUS_SOURCESTENS  "sources"
+    IDS_STATUS_SOURCES11TO19 "sources"
+    IDS_STATUS_SOURCES2TO4  "sources"
+    IDS_STATUS_SOURCES5TO9  "sources"
 END
 
 #endif    // English (Australia) resources
