--- a/trunk/shareaza/Shareaza.rc
+++ b/trunk/shareaza/Shareaza.rc
@@ -126,8 +126,8 @@ IDR_BITTORRENT_ICON     ICON                    "res\\Bittorrent.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,3,0
- PRODUCTVERSION 2,0,3,0
+ FILEVERSION 2,0,3,2
+ PRODUCTVERSION 2,0,3,2
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -145,12 +145,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 0, 3, 0"
+            VALUE "FileVersion", "2, 0, 3, 2"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 0, 3, 0"
+            VALUE "ProductVersion", "2, 0, 3, 2"
         END
     END
     BLOCK "VarFileInfo"
@@ -1948,10 +1948,11 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,200,61,50,14
 END
 
-IDD_LANGUAGE DIALOG  0, 0, 292, 154
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+IDD_LANGUAGE DIALOGEX 0, 0, 292, 154
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_VSCROLL | 
+    WS_SYSMENU
 CAPTION "Select Language"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
 END
 
@@ -3286,7 +3287,7 @@ BEGIN
     IDD_LANGUAGE, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 285
+        RIGHTMARGIN, 274
         TOPMARGIN, 7
         BOTTOMMARGIN, 147
     END
