384 DSL added to wizard

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3802,6 +3802,8 @@ BEGIN
     IDC_CONNECTION_SPEED, 0x403, 10, 0
 0x3220, 0x3635, 0x6b20, 0x7062, 0x0073, 
     IDC_CONNECTION_SPEED, 0x403, 10, 0
+0x3320, 0x3438, 0x6b20, 0x7062, 0x0073, 
+    IDC_CONNECTION_SPEED, 0x403, 10, 0
 0x3520, 0x3231, 0x6b20, 0x7062, 0x0073, 
     IDC_CONNECTION_SPEED, 0x403, 11, 0
 0x3120, 0x3230, 0x2034, 0x626b, 0x7370, "\000" 
