--- a/shareaza/Shareaza.vcproj
+++ b/shareaza/Shareaza.vcproj
@@ -163,7 +163,9 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_SHAREAZA"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
+				BufferSecurityCheck="TRUE"
 				DefaultCharIsUnsigned="TRUE"
 				UsePrecompiledHeader="3"
 				PrecompiledHeaderThrough="stdafx.h"
@@ -9893,6 +9895,8 @@
 					<Tool
 						Name="VCCLCompilerTool"
 						Optimization="2"
+						InlineFunctionExpansion="2"
+						OmitFramePointers="TRUE"
 						PreprocessorDefinitions=""
 						BrowseInformation="1"/>
 				</FileConfiguration>
@@ -11525,6 +11529,9 @@
 				RelativePath="ComMenu.h">
 			</File>
 			<File
+				RelativePath=".\asm\common.inc">
+			</File>
+			<File
 				RelativePath="ComObject.h">
 			</File>
 			<File
@@ -11984,7 +11991,13 @@
 				RelativePath="Handshakes.h">
 			</File>
 			<File
+				RelativePath=".\Hash.h">
+			</File>
+			<File
 				RelativePath="HashDatabase.h">
+			</File>
+			<File
+				RelativePath=".\Hashes.h">
 			</File>
 			<File
 				RelativePath="HostBrowser.h">
