--- a/trunk/shareaza/Shareaza.vcproj
+++ b/trunk/shareaza/Shareaza.vcproj
@@ -236,6 +236,7 @@
 				EnableIntrinsicFunctions="TRUE"
 				FavorSizeOrSpeed="1"
 				OptimizeForWindowsApplication="TRUE"
+				AdditionalIncludeDirectories=".\zlib"
 				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;_SHAREAZA"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -287,7 +288,7 @@
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
 				Culture="3081"
-				AdditionalIncludeDirectories=".\zlib"/>
+				AdditionalIncludeDirectories=""/>
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
 			<Tool
