--- a/trunk/shareaza/Shareaza.vcproj
+++ b/trunk/shareaza/Shareaza.vcproj
@@ -4751,6 +4751,9 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\DownloadTransferFTP.cpp">
+			</File>
+			<File
 				RelativePath="DownloadTransferHTTP.cpp">
 				<FileConfiguration
 					Name="ASCII Release|Win32">
@@ -11903,6 +11906,15 @@
 			</File>
 			<File
 				RelativePath="DownloadTransferED2K.h">
+			</File>
+			<File
+				RelativePath=".\DownloadTransferFTP.h">
+			</File>
+			<File
+				RelativePath=".\DownloadTransferFTPDATA.h">
+			</File>
+			<File
+				RelativePath=".\DownloadTransferFTPLIST.h">
 			</File>
 			<File
 				RelativePath="DownloadTransferHTTP.h">
